Initialize PBB-Graph subgraph

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -3,12 +3,13 @@ indexerHints:
   prune: auto
 schema:
   file: ./schema.graphql
+
 dataSources:
   - kind: ethereum
     name: PBBFactory
     network: sepolia
     source:
-      address: "0xc74b6f8E94d7CE7cE3AaF7DAB8d378D910b64710"
+      address: "0x52cEcf20A9A2ECFf94c2D8459960BFD42324b63E"
       abi: PBBFactory
       startBlock: 7668872
     mapping:
@@ -23,10 +24,37 @@ dataSources:
         - name: PBBFactory
           file: ./abis/PBBFactory.json
       eventHandlers:
-        - event: ImplementationAdded(uint256,address)
-          handler: handleImplementationAdded
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
+      #  - event: ImplementationAdded(uint256,address)
+      #    handler: handleImplementationAdded
+      #  - event: OwnershipTransferred(indexed address,indexed address)
+      #    handler: handleOwnershipTransferred
         - event: PBBCreated(indexed address,indexed address,uint256,string)
           handler: handlePBBCreated
-      file: ./src/pbb-factory.ts
+      file: ./src/factory.ts
+
+
+templates:
+  - name: PublicBulletinBoard
+    kind: ethereum/contract
+    network: sepolia
+    source:
+      abi: PBB
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - UserAuthorized
+        - Message
+      abis:
+        - name: PBB
+          file: ./abis/pbb.json
+      eventHandlers:
+        - event: UserAuthorized(indexed address,indexed address,uint256)
+          handler: handleUserAuthorized
+        - event: MessageAdded(indexed address,string,string,uint256)
+          handler: handleMessageAdded
+        - event: UserRevoked(indexed address,indexed address,uint256)
+          handler: handleUserRevoked
+      file: ./src/pbb.ts
+
