--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.95.0",
-    "@graphprotocol/graph-ts": "0.36.0"
-  },
-  "devDependencies": { "matchstick-as": "0.6.0" }
+    "@graphprotocol/graph-ts": "0.36.0",
+    "PBB-Graph": "file:"
+  }
 }
